UCD 10.0, snap latest NamesList.txt and .html
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1306 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/ucd/10.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/10.0.0-Update/NamesList.html
@@ -28,7 +28,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top"><span class="changedspan">10</span>.0.0</td>
+        <td valign="top">10.0.0</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -36,19 +36,19 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">20<span class="changedspan">17-04-27</span></td>
+        <td valign="top">2017-06-14</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/9.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/<span class="changedspan">10</span>.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/10.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/10.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
         <td valign="top">
 		<a href="http://www.unicode.org/Public/9.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/<span class="changedspan">9</span>.0.0/ucd/NamesList.html</a></td>
+		http://www.unicode.org/Public/9.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Latest Version</td>
@@ -209,8 +209,8 @@ CHAR_ENTRY:   NAME_LINE | RESERVED_LINE
     present at the very beginning of the file, forcing the encoding to be 
     interpreted as UTF-16 (little-endian only) or UTF-8.</p>
 <p>Several of these elements, while part of the formal definition of the 
-  file format, do not occur in final published versions of <span class="removedspan">the</span>
-   NamesList.<span class="changedspan">txt in the UCD.</span></p>
+  file format, do not occur in final published versions of 
+   NamesList.txt in the UCD.</p>
 
 <h4>Blocks followed by Summaries</h4>
 <p>A block may be extended by a summary of standard variation sequences or selected alternate glyphs (or both) defined for characters in the block:</p>
@@ -507,8 +507,8 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        prefixed with a BOM, or UTF-8 prefixed with the UTF-8 BOM.</li>
        <li>While the format allows multiple &lt;tab&gt; characters, by convention the 
        actual number of tabs is always one or two, chosen to provide the best 
-       layout of the plain<span class="changedspan"> </span>text file.</li>
-       <li>Earlier published versions of the NamesList<span class="changedspan">.txt</span> file may contain trailing or otherwise extraneous 
+       layout of the plain text file.</li>
+       <li>Earlier published versions of the NamesList.txt file may contain trailing or otherwise extraneous 
        spaces or tab characters; while these are errors in the files, they are not 
        being corrected, to retain stability of the published versions. Anyone 
        writing a parser for older versions of this file may need to be prepared to 
@@ -516,9 +516,9 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        <li>The final LF in the file must be present.</li>
 </ul>
   <h2><a name="Modifications" href="#Modifications">Modifications</a></h2>
-  <p class="changed"><b>Version 10.0.0</b></p>
+  <p><b>Version 10.0.0</b></p>
         <ul>
-        <li class="changed">Reissued for Unicode 10.0.0.</li>
+        <li>Reissued for Unicode 10.0.0.</li>
         </ul>
   <p><b>Version 9.0.0</b></p>
         <ul>
