git-svn-id: https://unicode.org/repos/unicodetools/trunk@1308 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -386,6 +386,21 @@
                 Recently Added</a>.</td>
             </tr>
             <tr>
+              <th><a name='col-status' href='#col-status'>Status</a></th>
+              <td colspan="2">In the <a target='candidates'
+								href="emoji-candidates.html">Emoji Candidates</a> chart, provisional information about the candidate that will be needed for character properties:
+                <ul>
+                  <li><strong>&gt; X</strong> indicates where the character (tentatively) would be after X in <a target="order" href="emoji-ordering.html">Emoji Ordering</a></li>
+                  <li><strong>∈ modifier_base</strong> indicates that the character would allow skin-tone modifiers</li>
+                  <li><strong>∈ gender_base</strong> indicates that the character would have ZWJ sequences for gender</li>
+              </ul></td>
+            </tr>
+            <tr>
+              <th><a name='col-prop' href='#col-prop'>Proposal</a></th>
+              <td colspan="2">In the <a target='candidates'
+								href="emoji-candidates.html">Emoji Candidates</a> chart, the original proposal for the character. Note that the form in <a target="_blank" href="../selection.html">Submitting Emoji Character Proposals</a> may change over time, so the original proposal may not contain all the information now required.</td>
+            </tr>
+            <tr>
               <th><a name='col-count' href='#col-count'>Count</a></th>
               <td colspan="2">The number of emoji of a particular type.</td>
             </tr>
