git-svn-id: https://unicode.org/repos/unicodetools/trunk@1310 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/text/UCA/name_help.html
+++ b/unicodetools/org/unicode/text/UCA/name_help.html
@@ -47,13 +47,7 @@ th {
 			</ul>
 		</li>
 	</ul>
-	<p>
-		<i>To properly view these charts, you need to have an updated
-			browser and Unicode fonts that cover the characters you are
-			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
-				Problems</a>.
-		</i>
-	</p>
+	<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+  that cover the characters you are interested in</i>.</p>
 </body>
 </html>
