--- a/unicodetools/org/unicode/text/UCA/case_help.html
+++ b/unicodetools/org/unicode/text/UCA/case_help.html
@@ -59,13 +59,8 @@ a.new {
 	<p>Hovering over a cell will show the name of the character in that
 		cell.</p>
 	<p>
-		<i>To properly view these charts, you need to have an updated
-			browser and Unicode fonts that cover the characters you are
-			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
-				Problems</a>.
-		</i>
-	</p>
+<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+  that cover the characters you are interested in</i>.</p>
 </body>
 
 </html>
