--- a/unicodetools/org/unicode/text/UCA/help.html
+++ b/unicodetools/org/unicode/text/UCA/help.html
@@ -122,14 +122,8 @@ character in the chart, as follows.</p>
   <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr10/" target="_top">UTS 
     #10: Unicode Collation Algorithm</a>.</li>
 </ul>
-	<p>
-		<i>To properly view these charts, you need to have an updated
-			browser and Unicode fonts that cover the characters you are
-			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
-				Problems</a>.
-		</i>
-	</p>
+	<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+  that cover the characters you are interested in</i>.</p>
 
 </body>
 
