--- a/unicodetools/org/unicode/text/UCA/nameslist_help.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_help.html
@@ -35,13 +35,7 @@ th {
 		<li>↕ Points to the titlecase form (where different from uppercase).</li>
 		<li>↔︎ Points to the casefold form (where different from lowercase).</li>
 	</ol>
-	</p>
-		<i>To properly view these charts, you need to have an updated
-			browser and Unicode fonts that cover the characters you are
-			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
-				Problems</a>.
-		</i>
-	</p>
+	<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+  that cover the characters you are interested in</i>.</p>
 </body>
 </html>
