--- a/unicodetools/org/unicode/text/UCA/norm_help.html
+++ b/unicodetools/org/unicode/text/UCA/norm_help.html
@@ -51,14 +51,8 @@ differ from at least one of their normalization forms (C, D, KC, KD).</p>
   <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr15/" target="_top">UAX 
     #15: Unicode Normalization Forms</a>.</li>
 </ul>
-	<p>
-		<i>To properly view these charts, you need to have an updated
-			browser and Unicode fonts that cover the characters you are
-			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
-				Problems</a>.
-		</i>
-	</p>
+	<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+  that cover the characters you are interested in</i>.</p>
 </body>
 
 </html>
