--- a/unicodetools/org/unicode/text/UCA/script_help.html
+++ b/unicodetools/org/unicode/text/UCA/script_help.html
@@ -39,7 +39,7 @@ that cover the characters you are interested in</i>.</p>
     <li>U+0589	(։) ARMENIAN FULL STOP, because it has Script_Extensions={Armenian, Georgian}</li>
     </ul>
     </li>
-	<li>A single character decomposition with a single implicit Script property value in its <strong>Script_Extensions</strong> set is listed in charts at the end according to the characters General_Category value
+	<li>A single character decomposition with a single implicit Script property value in its <strong>Script_Extensions</strong> set is listed in charts at the end according to the character’s General_Category value
       <ul>
       <li style='list-style-type:none; margin-left:-1em'><em>For example, the Number-Decimal chart lists</em></li>
       <li>U+0030	(0 	) DIGIT ZERO, because it has Script_Extensions={Common} — and no decomposition into characters with other Script values</li>
