--- a/unicodetools/org/unicode/tools/emoji/redirect-candidates.html
+++ b/unicodetools/org/unicode/tools/emoji/redirect-candidates.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="0; URL='../charts/emoji-candidates.html" />
+<meta http-equiv="refresh" content="0; URL='../index.html" />
 </html>
