git-svn-id: https://unicode.org/repos/unicodetools/trunk@1315 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -107,9 +107,11 @@
             <tr>
               <td nowrap><a target='candidates'
 								href="../future/emoji-candidates.html">Emoji Candidates</a></td>
-              <td>Characters accepted by the UTC as possible <a
+              <td>Characters accepted by the UTC as <a
 								target='_blank'
-								href='http://unicode.org/emoji/selection.html#timeline'>candidates</a> for a future version of emoji. </td>
+								href='http://unicode.org/emoji/selection.html#timeline'>candidates</a> for a future version of emoji. 							
+								<i>Provisional candidates</i> are subject to prioritization, and may not included be in the next release of Unicode.
+								<i>Final candidates</i> will be in the next release of Unicode, but do not have final code points or names.</td>
             </tr>
             <tr>
               <td nowrap><a target='zwj' href="emoji-zwj-sequences.html">Emoji
