git-svn-id: https://unicode.org/repos/unicodetools/trunk@1402 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/dont-save-format.html
+++ b/unicodetools/org/unicode/tools/emoji/dont-save-format.html
@@ -55,7 +55,7 @@
         </tr>
         <tr>
           <td class="navColCell navColCellPlus" valign="top"><a
-						href="../selection.html">Submitting Emoji Character Proposals</a></td>
+						href="../selection.html">Submitting Emoji Proposals</a></td>
         </tr>
         <tr>
           <td class="navColCell navColCellPlus" valign="top"><a
@@ -277,7 +277,8 @@
             <tr>
               <th><a name='col-prop' href='#col-prop'>Proposal</a></th>
               <td colspan="2">In the <a target='candidates'
-								href="emoji-candidates.html">Emoji Candidates</a> chart, the original proposal for the character. Note that the form in <a target="_blank" href="../selection.html">Submitting Emoji Character Proposals</a> may change over time, so the original proposal may not contain all the information now required.</td>
+								href="emoji-candidates.html">Emoji Candidates</a> chart, the original proposal for the character. 
+								Note that the form in <a target="_blank" href="../selection.html">Submitting Emoji Proposals</a> may change over time, so the original proposal may not contain all the information now required.</td>
             </tr>
             <tr>
               <th><a name='col-count' href='#col-count'>Count</a></th>
