--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <td class="navColCell navColCellPlus" valign="top"><a
-						href="../selection.html">Submitting Emoji Character Proposals</a></td>
+						href="../selection.html">Submitting Emoji Proposals</a></td>
         </tr>
         <tr>
           <td class="navColCell navColCellPlus" valign="top"><a
