--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -105,13 +105,13 @@
               <td>Emoji recently added to Emoji v%%VERSION%%.</td>
             </tr>
             <tr>
-              <td nowrap><a target='candidates'
-								href="../future/emoji-candidates.html">Emoji Candidates</a></td>
+              <td nowrap>Emoji Candidates<br>                
+                <a target='candidates'
+								href="../future/emoji-provisional.html">Provisional</a> • <a target='candidates'
+								href="../future/emoji-candidates.html">Draft</a></td>
               <td>Characters accepted by the UTC as <a
 								target='_blank'
-								href='http://unicode.org/emoji/selection.html#timeline'>candidates</a> for a future version of emoji. 							
-								<i>Provisional candidates</i> are subject to prioritization, and may not included be in the next release of Unicode.
-								<i>Final candidates</i> will be in the next release of Unicode, but do not have final code points or names.</td>
+								href='http://unicode.org/emoji/selection.html#timeline'>candidates</a> for a future version of emoji.</td>
             </tr>
             <tr>
               <td nowrap><a target='zwj' href="emoji-zwj-sequences.html">Emoji
