git-svn-id: https://unicode.org/repos/unicodetools/trunk@1438 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -92,12 +92,12 @@
             <tr>
               <td nowrap><a target='list' href="emoji-list.html">Emoji
                 List</a></td>
-              <td>Emoji characters and sequences for Emoji v%%VERSION%%.</td>
+              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with keywords.</td>
             </tr>
             <tr>
               <td nowrap><a target='full' href="full-emoji-list.html">Full
                 Emoji List</a></td>
-              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with images from major sources, dates, and keywords. </td>
+              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with images from major sources and a Browser column. </td>
             </tr>
             <tr>
               <td nowrap><a target='released' href="emoji-released.html">Emoji
