--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19876713-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-19876713-1');
+</script>
 <meta http-equiv="Content-Language" content="en-us">
 <title>Unicode Emoji v%%PLAIN_VERSION%%</title>
 <link rel="stylesheet" type="text/css"
@@ -204,7 +211,6 @@
           <script language='Javascript' type='text/javascript'
 						src='http://www.unicode.org/webscripts/lastModified.js'></script> 
         </div>
-        <script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-19876713-1', 'auto');  ga('send', 'pageview');</script> 
       </div></td>
   </tr>
 </table>
