--- a/unicodetools/org/unicode/text/UCA/norm_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/norm_index_header.html
@@ -4,6 +4,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19876713-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-19876713-1');
+</script>
 <meta name="keywords" content="Basic">
 <title>Normalization Chart</title>
 <style type='text/css'><!--
