git-svn-id: https://unicode.org/repos/unicodetools/trunk@1458 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -99,11 +99,12 @@
             <tr>
               <td nowrap><a target='list' href="emoji-list.html">Emoji
                 List</a></td>
-              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with keywords.</td>
+              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with keywords, but without skin tones.</td>
             </tr>
             <tr>
-              <td nowrap><a target='full' href="full-emoji-list.html">Full
-                Emoji List</a></td>
+              <td nowrap>Full Emoji List<br>
+                <i>Skin Tones: </i><a target='full' href="full-emoji-list.html">Without</a> 
+                • <a target="full-skin" href="full-emoji-modifiers.html">Only</a></td>
               <td>Emoji characters and sequences for Emoji v%%VERSION%%, with images from major sources and a Browser column. </td>
             </tr>
             <tr>
