More chart updates, plus a program for copying images to CLDR
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1465 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -89,8 +89,8 @@
         <p>While these charts use a particular version of the <a target='emoji-data' 
         href='http://unicode.org/Public/emoji/'>Unicode Emoji data files</a>, the images and format may be updated at any time.
           For any production usage, those files should be
-          consulted. For column descriptions, see <a
-								href='#chart_notation'>Chart Notation</a>.</p>
+          consulted. For column descriptions, see <a target='text' 
+								href='../format.html'>Emoji Chart Format</a>.</p>
         <div align="center">
           <table class='simple' border="1" cellpadding="1" cellspacing="0">
             <tr>
@@ -142,7 +142,7 @@
 						</tr>
 						-->
             <tr>
-              <th colspan='2'>Sort Order</th>
+              <th colspan='2'>Sort Order &amp; Counts</th>
             </tr>
             <tr>
               <td nowrap><a target='order' href="emoji-ordering.html">Emoji
@@ -150,6 +150,11 @@
               <td>The Emoji v%%VERSION%% characters and sequences in the
                 recommended sort order, which groups like characters together;
                 using <a href='http://cldr.unicode.org/' target='cldr'>CLDR</a> data. </td>
+            </tr>
+            <tr>
+              <td nowrap><a target='counts' href="emoji-counts.html">Emoji
+                Counts</a></td>
+              <td>Detailed counts of the Emoji v%%VERSION%% characters and sequences.</td>
             </tr>
             <tr>
               <th colspan='2'>Versions</th>
