--- a/unicodetools/data/ucd/11.0.0-Update/auxiliary/GraphemeBreakTest.html
+++ b/unicodetools/data/ucd/11.0.0-Update/auxiliary/GraphemeBreakTest.html
@@ -7,7 +7,7 @@ td, th { vertical-align: top }
 <body bgcolor='#FFFFFF'>
 <h2>Grapheme_Cluster_Break Chart</h2>
 <p><b>Unicode Version:</b> 11.0.0</p>
-<p><b>Date:</b> 2018-03-18, 13:30:33 GMT</p>
+<p><b>Date:</b> 2018-05-20, 09:03:08 GMT</p>
 <p>This page illustrates the application of the Grapheme_Cluster_Break specification. The material here is informative, not normative.</p> <p>The first chart shows where breaks would appear between different sample characters or strings. The sample characters are chosen mechanically to represent the different properties used by the specification.</p><p>Each cell shows the break-status for the position between the character(s) in its row header and the character(s) in its column header. The × symbol indicates no break, while the ÷ symbol indicated a break. The cells with × are also shaded to make it easier to scan the table. For example, in the cell at the intersection of the row headed by “CR” and the column headed by “LF”, there is a × symbol, indicating that there is no break between CR and LF.</p>
 <p>After the heavy blue line in the table are additional rows, either with different sample characters or for sequences. Some column headers may be composed, reflecting “treat as” or “ignore” rules.</p>
 <p>If your browser handles titles (tooltips), then hovering the mouse over the row header will show a sample character of that type. Hovering over a column header will show the sample character, plus its abbreviated general category and script. Hovering over the intersected cells shows the rule number that produces the break-status. For example, hovering over the cell at the intersection of LVT and T shows ×, with the rule 8.0. Checking below the table, rule 8.0 is “( LVT | T) × T”, which is the one that applies to that case. Note that a rule is invoked only when no lower-numbered rules have applied.</p>
@@ -44,10 +44,9 @@ td, th { vertical-align: top }
 <tr><th style='text-align:right'><a href='#r6.0' name='r6.0'>6.0</a></th><td style='text-align:right'>L </td><td>×</td><td> ( L | V | LV | LVT )</td></tr>
 <tr><th style='text-align:right'><a href='#r7.0' name='r7.0'>7.0</a></th><td style='text-align:right'>( LV | V ) </td><td>×</td><td> ( V | T )</td></tr>
 <tr><th style='text-align:right'><a href='#r8.0' name='r8.0'>8.0</a></th><td style='text-align:right'>( LVT | T) </td><td>×</td><td> T</td></tr>
-<tr><th style='text-align:right'><a href='#r9.0' name='r9.0'>9.0</a></th><td style='text-align:right'></td><td>×</td><td> (Extend | ZWJ | Virama)</td></tr>
+<tr><th style='text-align:right'><a href='#r9.0' name='r9.0'>9.0</a></th><td style='text-align:right'></td><td>×</td><td> (Extend | ZWJ)</td></tr>
 <tr><th style='text-align:right'><a href='#r9.1' name='r9.1'>9.1</a></th><td style='text-align:right'></td><td>×</td><td> SpacingMark</td></tr>
 <tr><th style='text-align:right'><a href='#r9.2' name='r9.2'>9.2</a></th><td style='text-align:right'>Prepend </td><td>×</td><td></td></tr>
-<tr><th style='text-align:right'><a href='#r9.3' name='r9.3'>9.3</a></th><td style='text-align:right'>Virama ExtCccZwj* </td><td>×</td><td> LinkingConsonant</td></tr>
 <tr><th style='text-align:right'><a href='#r11.0' name='r11.0'>11.0</a></th><td style='text-align:right'>ExtPict Extend* ZWJ </td><td>×</td><td> ExtPict</td></tr>
 <tr><th style='text-align:right'><a href='#r12.0' name='r12.0'>12.0</a></th><td style='text-align:right'>^ (RI RI)* RI </td><td>×</td><td> RI</td></tr>
 <tr><th style='text-align:right'><a href='#r13.0' name='r13.0'>13.0</a></th><td style='text-align:right'>[^RI] (RI RI)* RI </td><td>×</td><td> RI</td></tr>
