UCD 12.0: Updates: PropList.txt Vedic signs, NamesList.txt accessibility symbols, NamesList.html first draft
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1535 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/ucd/12.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/12.0.0-Update/NamesList.html
@@ -28,7 +28,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top">11.0.0</td>
+        <td valign="top">12.0.0</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -36,19 +36,19 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2018-05-31</td>
+        <td valign="top">2018-08-10</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/11.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/11.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/12.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/12.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/10.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/10.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/11.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/11.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Latest Version</td>
@@ -525,7 +525,11 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        <li>The final LF in the file must be present.</li>
 </ul>
   <h2><a name="Modifications" href="#Modifications">Modifications</a></h2>
-  <p><b>Version 11.0.0</b></p>
+    <p><b>Version 12.0.0</b></p>
+        <ul>
+        <li>Reissued for Unicode 12.0.0.</li>
+        </ul>
+    <p><b>Version 11.0.0</b></p>
         <ul>
         <li>Reissued for Unicode 11.0.0.</li>
         <li>Loosened the limitation on repertoire allowed in LINE and LABEL
