Ancillary charts 12.0: bug fixes
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1561 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/text/UCA/case_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/case_index_header.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-19876713-1');
 </script>
 <meta name="keywords" content="Basic">
-<title>Case Chart</title>
+<title>Case Charts</title>
 <style type='text/css'>
 <!--
 p {
