--- a/unicodetools/org/unicode/text/UCA/nameslist_chart_header.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_chart_header.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-19876713-1');
 </script>
 <meta name="keywords" content="Basic">
-<title>Case Chart</title>
+<title>Names List Charts</title>
 <style type='text/css'>
 <!--
 p {
@@ -45,7 +45,7 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Nameslist Charts</h2>
+		<h2 align="center">Names List Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html" target="names">Help</a>
 		</p>
