--- a/unicodetools/org/unicode/text/UCA/nameslist_help.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_help.html
@@ -22,7 +22,7 @@ th {
 
 <body>
 
-	<h1>About Name List Charts</h1>
+	<h1>About Names List Charts</h1>
 	<p>The Names List Charts provide HTML charts of the characters in
 		Unicode, based on NamesList.txt. The characters added in the last
 		release are in yellow.
