--- a/unicodetools/org/unicode/text/UCA/nameslist_index.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_index.html
@@ -10,7 +10,7 @@
   gtag('js', new Date());
   gtag('config', 'UA-19876713-1');
 </script>
-<title>Name List Charts</title>
+<title>Names List Charts</title>
 </head>
 
 <frameset cols="25%,*">
