--- a/unicodetools/org/unicode/text/UCA/script_help.html
+++ b/unicodetools/org/unicode/text/UCA/script_help.html
@@ -23,7 +23,7 @@ th {
 <body>
 
 	<h1>About Script Charts</h1>
-<p>The Script Charts lists Unicode characters organized by script. The same character may be in multiple charts if it has multiple <strong>Script_Extensions</strong> values or has a compatibility decomposition.</p>
+<p>The Script Charts list Unicode characters organized by script. The same character may be in multiple charts if it has multiple <strong>Script_Extensions</strong> values or has a compatibility decomposition.</p>
 <p>Hovering over a cell will show the name of the character in that
   cell; characters added in the last release are in yellow.</p>
 <p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
