--- a/unicodetools/org/unicode/text/UCA/script_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/script_index_header.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-19876713-1');
 </script>
 <meta name="keywords" content="Basic">
-<title>Script Chart</title>
+<title>Script Charts</title>
 <style type='text/css'>
 <!--
 p {
