--- a/unicodetools/org/unicode/text/UCA/norm_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/norm_index_header.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-19876713-1');
 </script>
 <meta name="keywords" content="Basic">
-<title>Normalization Chart</title>
+<title>Normalization Charts</title>
 <style type='text/css'><!--
 p            { font-size: 90% }
 a.new {
