--- a/unicodetools/data/ucd/13.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/13.0.0-Update/NamesList.html
@@ -11,17 +11,25 @@
 <link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
 </head>
 
-<body bgcolor="#ffffff">
+<body>
 
-<table class="header">
-  <tr>
-    <td class="icon"><a href="http://www.unicode.org"><img border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" alt="[Unicode]" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/ucd/">Unicode    
-      Character Database</a></td>   
-  </tr>
-  <tr>
-    <td class="gray">&nbsp;</td>
-  </tr>
-</table>
+	<table class="header">
+		<tr>
+          <td class="icon" style="width:38px; height:35px">
+          <a href="http://www.unicode.org/">
+          <img border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" 
+          alt="[Unicode]" width="34" height="33"></a>
+          </td>
+
+          <td class="icon" style="vertical-align:middle">
+          <a class="bar"> </a>
+          <a class="bar" href="https://www.unicode.org/ucd/"><font size="3">Unicode Character Database</font></a>
+          </td>
+		</tr>
+		<tr>
+			<td colspan="2" class="gray">&nbsp;</td>
+		</tr>
+	</table>
 <div class="body">
   <h1>Unicode® NamesList File Format</h1>   
   <table class="simple" width="90%">
@@ -36,7 +44,7 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2019-11-05</td>
+        <td valign="top">2020-02-12</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
@@ -329,14 +337,18 @@ is machine generated and will always explicitly provide any summary subheaders.<
 <strong>SIDEBAR_LINE: 	&quot;;;&quot; LINE</strong>
 			// Output LINE as marginal note
 
-<strong>DECOMPOSITION:	TAB &quot;:&quot; SP EXPAND_LINE</strong>       
-			// Replace ':' by EQUIV, expand line into 
-			// decomposition 
+<strong>DECOMPOSITION:	TAB &quot;:&quot; SP EXPAND_LINE       
+		| TAB &quot;:&quot; SP &quot;&lt;&quot; TAG &quot;&gt;&quot; SP EXPAND_LINE</strong>       
+			// Replace ':' by EQUIV, expand line into decomposition
+			// The &lt;tag&gt; gives optional information,
+			// e.g., about composition exclusion. 
+			// by convention the tag has initial lowercase
 
 <strong>COMPAT_MAPPING:	TAB &quot;#&quot; SP EXPAND_LINE       
 		| TAB &quot;#&quot; SP &quot;&lt;&quot; TAG &quot;&gt;&quot; SP EXPAND_LINE</strong>    
-			// Replace '#' by APPROX, output line as mapping;
-			// check for balanced &lt; &gt;
+			// Replace '#' by APPROX, output line as mapping
+			// The &lt;tag&gt; is the optional compatibility decomposition tag.
+			// by convention the tag has initial lowercase
 
 <strong>NOTICE_LINE:	&quot;@+&quot; TAB LINE</strong>       
 			// Output LINE as notice
@@ -530,6 +542,9 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
     <p><b>Version 13.0.0</b></p>
         <ul>
         <li>Reissued for Unicode 13.0.0.</li>
+        <li>Added a second expansion for DECOMPOSITION, for possible future
+        	use to designate specific subtypes of canonical decompositions
+        	in the names list output.</li>
     	</ul>
     <p><b>Version 12.1.0</b></p>
         <ul>
