--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -70,9 +70,9 @@ There are two approaches for disabling the text autosizer feature:
 						href="https://unicode.org/press/emoji.html">Emoji-related Press</a></td>
         </tr>
         <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://unicode.org/cldr/utility/list-unicodeset.jsp?a=%5B%3Aemoji%3A%5D&amp;g=emoji">Unicode
-            Utilities Emoji Set</a> (for developers)</td>
+          <td class="navColCell navColCellPlus" valign="top"><!--  <a
+						href="https://unicode.org/cldr/utility/list-unicodeset.jsp?a=%5B%3Aemoji%3A%5D&amp;g=emoji"> -->Unicode
+            Utilities Emoji Set<!-- </a> --> (for developers)</td>
         </tr>
         <tr>
           <td class="navColCell navColCellPlus" valign="top"><a
