Fix charts & data for emoji 13.1 (#25)
* aug 27 charts

* test

* first cut at fixing emoji

* 2nd pass at emoji fixes

* Fixes to get the counts right

* Drop the 2 provisional characters replaced by sequences; add the handshakes with tones. Note special code to hack the names.

* Updated emoji charts (small changes for proposal, note for handshake). Unrelated utility

* small updates from review; and make sure to use latest images

* Minor comment

* Small change to restore kiss/couple (old code was filtering them out); also two unrelated changes to remove errors in UnicodeJsps.

* drop old provisional mending heart

* Cleanup proposal data, fix Emoji VERSION14

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -36,51 +36,7 @@ There are two approaches for disabling the text autosizer feature:
 			alt='[Unicode]' src='https://www.unicode.org/webscripts/logo60s2.gif'></a><a
 			class='bar' target='text' href='index.html'>Emoji Charts</a> </div>
 <div class='gray'>&nbsp;</div>
-<table width="100%" class='noborder'>
-  <tr>
-    <td class="navCol navColPlus" width='25%'><table class="navColTable navColTablePlus">
-        <tr>
-          <td class="navColTitle navColTitlePlus">Related Unicode Links</td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a href="../index.html">Unicode
-            Emoji</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="%%TR51_HTML%%">UTS #51,
-            Unicode Emoji</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://www.unicode.org/Public/emoji/latest/">Unicode
-            Emoji Data Files</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="../proposals.html">Submitting Emoji Proposals</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://www.unicode.org/faq/emoji_dingbats.html">FAQ:
-            Emoji and Dingbats</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://unicode.org/press/emoji.html">Emoji-related Press</a></td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://unicode.org/cldr/utility/list-unicodeset.jsp?a=%5B%3Aemoji%3A%5D&amp;g=emoji">Unicode
-            Utilities Emoji Set</a> (for developers)</td>
-        </tr>
-        <tr>
-          <td class="navColCell navColCellPlus" valign="top"><a
-						href="https://unicode.org/resources/emoji.html">Other Emoji
-            Resources</a></td>
-        </tr>
-      </table></td>
-    <td class='contents noborder'><div class='main'>
+<div class='main'>
         <div class='aacButton' title='Show your support of Unicode'> <a target='sponsors' href='../../consortium/adopt-a-character.html'><b>Adopt-a-Character</b><br>
           <img class='aacImage' alt='AAC Animation'
 						src='../../consortium/images/aac-some-sponsors.gif'></a> </div>
@@ -229,8 +185,6 @@ There are two approaches for disabling the text autosizer feature:
           <script language='Javascript' type='text/javascript'
 						src='http://www.unicode.org/webscripts/lastModified.js'></script> 
         </div>
-      </div></td>
-  </tr>
-</table>
+      </div>
 </body>
 </html>
