Update link to Main Emoji Page

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -41,7 +41,7 @@ There are two approaches for disabling the text autosizer feature:
           <img class='aacImage' alt='AAC Animation'
 						src='../../consortium/images/aac-some-sponsors.gif'></a> </div>
         <h1> Unicode® Emoji Charts v%%VERSION%%</h1>
-        <p style='text-align:center'><a target='emoji_subsite' href='../index.html'>Main Emoji Page</a></p>
+        <p style='text-align:center'><a target='emoji_subsite' href='https://www.unicode.org/emoji/techindex.html'>Main Emoji Page</a></p>
         %%LINK_OTHER%%
         <p>The following charts have been generated to illustrate various
           features of the emoji characters in Unicode. These are derived from
