Unicode 14 data files 20210903

--- a/unicodetools/data/ucd/14.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/14.0.0-Update/NamesList.html
@@ -36,7 +36,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top"><span class="changedspan">14.0.0</span></td>
+        <td valign="top">14.0.0</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -44,17 +44,17 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top"><span class="changedspan">2021-02-09</span></td>
+        <td valign="top">2021-09-01</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
-        <td valign="top" class="changed">
+        <td valign="top">
 		<a href="http://www.unicode.org/Public/14.0.0/ucd/NamesList.html">
 		http://www.unicode.org/Public/14.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
-        <td valign="top" class="changed">
+        <td valign="top">
 		<a href="http://www.unicode.org/Public/13.0.0/ucd/NamesList.html">
 		http://www.unicode.org/Public/13.0.0/ucd/NamesList.html</a></td>
       </tr>
@@ -447,7 +447,7 @@ is machine generated and will always explicitly provide any summary subheaders.<
 <li>An empty standard variation subheader expression will result in the default header &quot;Standardized Variation Sequences&quot;</li>
 <li> A VARSEL_LIST may only contain code points for standard variation selectors (including script specific ones)</li>
 <li>When displaying a VARIATION_LINE for alternate glyphs, the &quot;ALTn&quot; selector is not displayed. </li>
-<li>If a glyph is unavailable for the variant glyph in a VARIATION_LINE it is replaced by the glyph for <span class="changedspan">U+2591</span> LIGHT <span class="removedspan">SCREEN</span> <span class="changedspan">SHADE</span>.</li>
+<li>If a glyph is unavailable for the variant glyph in a VARIATION_LINE it is replaced by the glyph for U+2591 LIGHT SHADE.</li>
 	</ul>
 
 
@@ -539,8 +539,8 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
 </ul>
   <h2><a name="Modifications" href="#Modifications">Modifications</a></h2>
 
-    <p class="changed"><b>Version 14.0.0</b></p>
-        <ul class="changed">
+    <p><b>Version 14.0.0</b></p>
+        <ul>
         <li>Reissued for Unicode 14.0.0.</li>
         <li>Corrected character name LIGHT SCREEN to LIGHT SHADE.</li>
     	</ul>
